# Binary-Semantic-Segmentation

./: .gitignore  pyproject.toml
src/: logwb.py  oxford_pet.py  train.py
src/models/: resnet34_unet.py  unet.py
